# homni

./: .devdoctorrc.js  .env  .env.example  .env.local.example  .eslintrc.json  .prettierignore  .prettierrc  API_SETUP.md  ARCHITECTURE.md  ARCHITECTURE_STATUS.md  CHANGELOG.md  CI_CD_SETUP_COMPLETION.md  COMMIT_MESSAGE.md  COMPREHENSIVE_DEVELOPMENT_SETUP_COMPLETION.md  DEPENDENCY_CLEANUP_COMPLETE.md  DEPLOYMENT_READY.md  DEVELOPMENT_TOOLS_COMPLETION.md  DEV_NOTES.md  DEV_STATUS.md  EMERGENCY_FIX_COMPLETE.md  ENVIRONMENT-MIGRATION-STATUS.md  ENVIRONMENT.md  FINAL_VALIDATION_REPORT.md  HOMNI-IMPLEMENTATION.md  IMPLEMENTATION_COMPLETE.md  LINK_FIXES_APPLIED.md  MOBILE_PC_PARITY_COMPLETE.md  MOBILE_PC_PARITY_STATUS.md  NAVIGATION_COMPLETE.md  NOW.md  PACKAGE-SCRIPTS-UPDATE.md  PERFORMANCE_COMPLETE.md  PHASE_1A_COMPLETION_REPORT.md  PHASE_2_COMPLETE.md  PHASE_2_COMPLETION.md  PHASE_2_SECURITY_LOCKDOWN_COMPLETE.md  PHASE_A1_STATUS.md  PHASE_STATUS.md  PLAYWRIGHT_TYPESCRIPT_FIX_COMPLETE.md  PRODUCTION_READY.md  (+36 more)
.github/: PULL_REQUEST_TEMPLATE.md  pull_request_template.md
.husky/: pre-commit
cypress/: tsconfig.json
docs/: ADR-002-admin-route-consolidation.md  ARCHITECTURE.md  (+58 more)
services/api-gateway/: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
services/api-gateway/app/: __init__.py  config.py  db.py  main.py
services/api-gateway/app/routers/admin/: __init__.py  companies.py  leads.py  users.py
services/api-gateway/app/routers/public/: __init__.py  health.py  webhooks.py
services/api-gateway/tests/: conftest.py  test_auth.py  test_health.py
(+1838 files in other folders)
